Correct the problem of alignment and update the fonts

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,7 +3,7 @@
 /*=======================*/
 
 /* Ubuntu fonts */
-@font-face {
+/*@font-face {
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 300;
@@ -44,7 +44,7 @@
     font-style: normal;
     font-weight: 400;
     src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url(http://themes.googleusercontent.com/static/fonts/ubuntumono/v4/ViZhet7Ak-LRXZMXzuAfkYbN6UDyHWBl620a-IRfuBk.woff) format('woff');
-}
+}*/
 @font-face {
     font-family: 'Mishmash BRK';
     font-weight: normal;
@@ -55,7 +55,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
     color: #fff;
     #background-color: #000;
     background-color: rgba(44,62,80 , .8 );
@@ -75,26 +75,34 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 15px 0 15px;
+    /*margin: 15px 0 15px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: 1px;*/
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
 }
 
 p {
-    margin: 0 0 5px;
-    font-size: 12px;
+    margin-bottom: 5px;
+    font-size: 16px;
     line-height: 1.5;
-    font-family: 'Ubuntu';
 }
 
+
 @media(min-width:768px) {
-    p {
+    /*p {
         margin: 0 0 5px;
         font-size: 18px;
         line-height: 1.6;
-	font-family: 'Ubuntu';
+    }*/
+    p {
+	margin-bottom: 5px;
+	font-size: 16px;
+	line-height: 1.5;
     }
     h1,
     h2,
@@ -102,11 +110,15 @@ p {
     h4,
     h5,
     h6 {
-	margin: 15px 0 15px;
-	text-transform: uppercase;
-	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-weight: 700;
-	letter-spacing: 1px;
+	/*margin: 15px 0 15px;
+	  text-transform: uppercase;
+	  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	  font-weight: 700;
+	  letter-spacing: 1px;*/
+	font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+	font-weight: 500;
+	line-height: 1.1;
+	color: inherit;
     }
 }
 
@@ -280,7 +292,7 @@ img.center {
 
 .intro .intro-body .intro-text {
     font-size: 12px;
-    font-family: Montserrat;
+    font-weight: 600;
 }
 
 @media(min-width:768px) {
@@ -297,8 +309,7 @@ img.center {
 
     .intro .intro-body .intro-text {
         font-size: 18px;
-	font-family: Montserrat;
-	#color: #21819d;
+	font-weight: 600;
     }
 
     
@@ -311,7 +322,6 @@ img.center {
 
     .panel-body {
 	font-size: 12px;
-	font-family: 'Ubuntu';
     }
 
     .panel-title {
@@ -327,7 +337,6 @@ img.center {
 
 .panel-body {
     font-size: 12px;
-    font-family: 'Ubuntu';
 }
 
 .countdown-container {
@@ -404,7 +413,8 @@ img.center {
     #border: 1px solid #21819d;
     color: #21819d;
     background-color: transparent;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-size: 16px;
 }
 
@@ -418,7 +428,6 @@ img.center {
 
 .text-footer {
     font-size: 8px;
-    font-family: "Ubuntu";
     text-align: center;
 }
 
@@ -453,7 +462,7 @@ img.center {
     }
 
     .clock-item {
-	margin: 0px 10px 0px 10px;
+    	margin: 0px 10px 0px 10px;
     }
 }
 
@@ -562,27 +571,23 @@ img.center {
 
 .parcours-left {
     text-align: left;
-    font-family: 'Ubuntu';
     font-size: 10pt;
 }
 
 .parcours-center {
     text-align: center;
-    font-family: 'Ubuntu';
     font-size: 10pt;
 }
 
 @media(min-width:767px) {
     .parcours-left {
 	text-align: left;
-	font-family: 'Ubuntu';
-	font-size: 14pt;
+	font-size: 12pt;
     }
     
     .parcours-center {
 	text-align: center;
-	font-family: 'Ubuntu';
-	font-size: 14pt;
+	font-size: 12pt;
     }
 }
 
